# Order-Management-Service-

./: .gitignore  CMakeLists.txt  README.md
genproto/order_service/: order.grpc.pb.cc  order.grpc.pb.h  order.pb.cc  order.pb.h
include/config/: config.hpp
include/service/: service.hpp
protos/order_service/: order.proto
scripts/: proto-gen.sh
src/: main.cpp
src/server/: server.cpp
src/service/: service.cpp
